CB-0078 | server: feedback module
