# packages/server/src/modules/feedback/feedback.module.ts
@@ -1,0 +1,12 @@
+import { Module } from '@nestjs/common';
+import { TypeOrmModule } from '@nestjs/typeorm';
+import { FeedbackController } from './feedback.controller';
+import { FeedbackService } from './feedback.service';
+import { FeedbackEntity as Feedback } from './feedback.entity';
+
+@Module({
+  imports: [TypeOrmModule.forFeature([Feedback])],
+  controllers: [FeedbackController],
+  providers: [FeedbackService],
+})
+export class FeedbackModule {}
